--- a/index.html
+++ b/index.html
@@ -30,8 +30,9 @@
                 </p>
                 <div id='s1d1d1'>
                     <button onclick="window.location.href='boilerplates.html'">BoilerPlates</button>
+                    <button onclick="window.location.href='snippets.html'">Snippets</button>
+                    <button onclick="window.location.href='color.html'">Color Theory</button>
                     <button onclick="window.location.href='#'">Design Ideas</button>
-                    <button onclick="window.location.href='#'">Color Terminology</button>
                     <button onclick="window.location.href='#'">Learning resources</button>
                     <button onclick="window.location.href='#'">Discord Communities</button>
                     <button onclick="window.location.href='#'">Instagram Accounts</button>
