--- a/boilerplates.html
+++ b/boilerplates.html
@@ -233,7 +233,7 @@
                 <i class="fab fa-instagram"></i>
             </a>
 
-            <a href='https://instagram.com/yashdidit'>
+            <a href='https://github.com/yashkolambekar'>
                 <i class="fab fa-github"></i>
             </a>
 
