--- a/color.html
+++ b/color.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,12 +8,14 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
+    <script src="https://kit.fontawesome.com/ffa8dd9570.js" crossorigin="anonymous"></script>
     <link href="css/style.css" rel="stylesheet">
     <link href="css/style-425.css" rel="stylesheet">
     <link href="css/color.css" rel="stylesheet">
     <script src="js/color.js"></script>
-    <title>OneStop - Color</title>
+    <title>OneStop - Colors</title>
 </head>
+
 <body onload="init()">
     <header>
         <div id="hd1">
@@ -23,29 +26,31 @@
     </header>
 
     <div class="section">
-        <h2>Everything about Colors</h2>
-        <div class="width50">
-            This page will be a solid guide for you to deal with colors and some tools to make your life easier
-        </div>
-        <br/>
-        <br/>
+        <h2>Colors</h2>
+        <br />
+        <br />
         <div>
-            To start with let's learn first about the basic of Colors<br/>
-            <span class="b-red">Red</span>, <span class="b-green">Green</span> and <span class="b-blue">Blue</span> are primary colors every and other color that we see is made by mixing these three colors in sepcific quantities 
-            <br/>
-            <br/>
-            In HTML we can specify colors with by specifying their names, by specifying their hex values or by specifying the rgb value, out of all these rgb values method is best for us to learn about colors
+            To start with let's learn first about the basic of Colors<br />
+            <span class="b-red">Red</span>, <span class="b-green">Green</span> and <span class="b-blue">Blue</span> are
+            primary colors every and other color that we see is made by mixing these three colors in sepcific quantities
+            <br />
+            <br />
+            In HTML we can specify colors with by specifying their names, by specifying their hex values or by
+            specifying the rgb value, out of all these rgb values method is best for us to learn about colors
             <br>
             <br>
             It looks like this, <br>
-            <span class="b-red">rgb(255, 0, 0);</span>, 
+            <span class="b-red">rgb(255, 0, 0);</span>,
             <span class="b-green">rgb(0, 255, 0);</span>,
             <span class="b-blue">rgb(0, 0, 255);</span>
             <br>
             <br>
-            To get an idea of how it works, rgb(rrr, ggg, bbb) here the r's inside the parenthesis or the brackets define the value of red in that particular color, it cam vary from 0 to 255 it's quite self explainatory that 0 means no red will be included and 255 means the most it can<br>
+            To get an idea of how it works, rgb(rrr, ggg, bbb) here the r's inside the parenthesis or the brackets
+            define the value of red in that particular color, it cam vary from 0 to 255 it's quite self explainatory
+            that 0 means no red will be included and 255 means the most it can<br>
             The same goes with the g's for green and b's for blue<br>
-            If we turn everything to 0, the color will be black and if we turn everything to 255, the color will be white<br>
+            If we turn everything to 0, the color will be black and if we turn everything to 255, the color will be
+            white<br>
             <br>
             To understand this better, tweak the value in the section below and see how to color changes
         </div>
@@ -55,10 +60,63 @@
         <div id='color-b-1' class='color-b'>
             <div>
                 rgb(<input id='rrr' min="0" max='255' placeholder='RRR' value="255" oninput="bcolor1()" type='number'>,
-                <input  id='ggg' min="0" max='255'  placeholder='GGG' value="255" oninput="bcolor1()" type='number'>,
-                <input id='bbb'  placeholder='BBB' min="0" max='255' value="255" oninput="bcolor1()" type='number'>);
+                <input id='ggg' min="0" max='255' placeholder='GGG' value="255" oninput="bcolor1()" type='number'>,
+                <input id='bbb' placeholder='BBB' min="0" max='255' value="255" oninput="bcolor1()" type='number'>);
             </div>
         </div>
+        <br>
+        <p>
+            The next step is to make sure the content of your site is readable and easy on eyes
+        </p>
+        <br><br>
+        <p>
+            To do this, first we have to make sure that we choose contrasting colors for our website, for example the
+            very page you are reading, the background is a darker shade of blue and the text is in white color so it's
+            easily redable due to the contrast in colors <br>
+            <span class="con-text">Whereas this text is not easily readable due to the non contrasting colors, </span>so
+            we have to make sure that our text is has a high level of contrast with the background, as in examples shown
+            below
+        </p>
+        <div id='color-grid'>
+            <div><p>AaBb</div>
+            <div><p>AaBb</div>
+            <div><p>AaBb</div>
+            <div><p>AaBb</div>
+        </div>
+        <p>Also the colors which are used in the site reflects emotions, so don't just use any colors as per your choice, first confirm it with the message that you want to give with your site and also the emotion associated with that particular color
+        <br><br>
+        Color's hold emotions such as Red stands for Romance, Anger etc and White stands for Peace, Standard and so on<br>
+        Check the table given below to see the meaning and message behind colors
+        </p>
+        <div id='table-div'>
+            <img src="media/emotion-behind-colors.png" alt="Table of Content">
+        </div>
+        <p>
+            <br>
+            These were the extreme basics that you need to know about colors as when you are starting, there are endless posibilities of topics and deeper studies in color which cant be covered all at one place
+        </p>
+
+        <br>
+        <br>
+        <h3>Useful tools</h3>
+        <br>
+        <p>
+            <b>Color Picker EyeDropper</b><br>
+            This is an chrome extension that is used to pick colors from any website on the internet, I personally use this tool a lot to copy colors from sites like Dribble, Awwwards etc to take inspiration from
+            <br><a href='https://chrome.google.com/webstore/detail/colorpick-eyedropper/ohcpnigalekghcmgcdcenkpelffpdolg?hl=en' target="=_blank">Add to chrome from here</a>
+        </p>
+        <br>
+        <p>
+            <b>Color Palette Generator from Canva</b><br>
+            Here you can uplod an image of your choice and it returns 4 colors or a color palette which you can use in your website, it generates it based on the colors in the image
+            <br><a href='https://www.canva.com/colors/color-palette-generator/' target="=_blank">Visit</a>
+        </p>
+        <br>
+        <p>
+            <b>Colorhunt.io</b><br>
+            Color hunt is a directory of color palettes, it has a huge number of predefined color palettes to choose from<br>
+            <a href="https://colorhunt.co/" target="=_blank">Visit</a>
+        </p>
     </div>
     <footer>
         <div>
@@ -70,7 +128,7 @@
                 <i class="fab fa-instagram"></i>
             </a>
 
-            <a href='https://instagram.com/yashdidit'>
+            <a href='https://github.com/yashkolambekar'>
                 <i class="fab fa-github"></i>
             </a>
 
@@ -84,4 +142,5 @@
         </div>
     </footer>
 </body>
+
 </html>
