--- a/index.html
+++ b/index.html
@@ -31,13 +31,9 @@
                 <div id='s1d1d1'>
                     <button onclick="window.location.href='boilerplates.html'">BoilerPlates</button>
                     <button onclick="window.location.href='snippets.html'">Snippets</button>
-                    <button onclick="window.location.href='color.html'">Color Theory</button>
-                    <button onclick="window.location.href='#'">Design Ideas</button>
-                    <button onclick="window.location.href='#'">Learning resources</button>
-                    <button onclick="window.location.href='#'">Discord Communities</button>
-                    <button onclick="window.location.href='#'">Instagram Accounts</button>
-                    <button onclick="window.location.href='#'">User Interface (UI)</button>
-                    <button onclick="window.location.href='#'">User Experience (UX)</button>
+                    <button onclick="window.location.href='color.html'">Colors</button>
+                    <button onclick="window.location.href='instagram-accounts.html'">Instagram Accounts</button>
+                    <button onclick="window.location.href='youtube-channels.html'">Youtube Channels</button>
                 </div>
             </div>
             <div id="s1d2">
