--- a/boilerplates.html
+++ b/boilerplates.html
@@ -15,6 +15,7 @@
         rel="stylesheet">
     <link href='css/boilerplates.css' rel="stylesheet">
     <link href='css/boilerplates-425.css' rel="stylesheet">
+    <link href='css/boilerplates-425.css' rel="stylesheet">
     <script src='js/boilerplates.js'></script>
     <title>OneStop - Boilerplates</title>
 </head>
@@ -218,7 +219,7 @@
                 </div>
                 <textarea spellcheck="false" id='jsbp' class='codearea'></textarea>
                 <div>
-                    <button onclick="jsbpcopy()" class='copy'>Copy</button>
+                    <button onclick="jsbpcopy()" id='jscopybtn' class='copy'>Copy</button>
                 </div>
             </div>
         </div>
