--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
                     <button onclick="window.location.href='color.html'">Colors</button>
                     <button onclick="window.location.href='instagram-accounts.html'">Instagram Accounts</button>
                     <button onclick="window.location.href='youtube-channels.html'">Youtube Channels</button>
+                    <button onclick="window.location.href='websites.html'">Websites</button>
                 </div>
             </div>
             <div id="s1d2">
