--- a/snippets.html
+++ b/snippets.html
@@ -18,6 +18,7 @@
     <link href='css/style.css' rel="stylesheet">
     <link href='css/snippets.css' rel="stylesheet">
     <link href='css/style-425.css' rel="stylesheet">
+    <link href='css/snippets-425.css' rel="stylesheet">
     <script src='js/snippets.js'></script>
     <title>OneStop - Snippets</title>
 </head>
