--- a/websites.html
+++ b/websites.html
@@ -17,6 +17,7 @@
         rel="stylesheet">
     <link href='css/style.css' rel="stylesheet">
     <link href='css/websites.css' rel="stylesheet">
+    <link href='css/websites-425.css' rel="stylesheet">
     <link href='css/style-425.css' rel="stylesheet">
     <script src='js/snippets.js'></script>
     <title>OneStop - Snippets</title>
