--- a/instagram-accounts.html
+++ b/instagram-accounts.html
@@ -8,10 +8,13 @@
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
     <meta http-equiv="Expires" content="0">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">    
     <script src="https://kit.fontawesome.com/ffa8dd9570.js" crossorigin="anonymous"></script>
     <link href="css/style.css" rel="stylesheet">
     <link href="css/style-425.css" rel="stylesheet">
     <link href="css/instagram-accounts.css" rel="stylesheet">
+    <link href="css/instagram-accounts-425.css" rel="stylesheet">
     <script src="js/instagram-accounts.js"></script>
     <title>OneStop - Instagram Accounts</title>
 </head>
