--- a/about.html
+++ b/about.html
@@ -20,6 +20,7 @@
     <link href='css/style-425.css' rel="stylesheet">
     <link href='css/about-425.css' rel="stylesheet">
     <script src='js/snippets.js'></script>
+    <link rel="shortcut icon" type="image/png" href="media/logo.png"/>
     <title>OneStop - Snippets</title>
 </head>
 
