--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 <link href='css/style.css' rel="stylesheet">
 <link href='css/style-425.css' rel="stylesheet">
 <script src='js/index.js'></script>
+<link rel="shortcut icon" type="image/png" href="media/logo.png"/>
     <title>OneStop</title>
 </head>
 <body>
