--- a/snippets.html
+++ b/snippets.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
     <meta http-equiv="Pragma" content="no-cache">
+    <link rel="shortcut icon" type="image/png" href="media/logo.png"/>
     <meta http-equiv="Expires" content="0">
     <script src="https://kit.fontawesome.com/ffa8dd9570.js" crossorigin="anonymous"></script>
     <link rel="preconnect" href="https://fonts.gstatic.com">
