--- a/youtube-channels.html
+++ b/youtube-channels.html
@@ -17,6 +17,7 @@
     <link href="css/youtube-channels.css" rel="stylesheet">
     <link href="css/youtube-channels-425.css" rel="stylesheet">
     <script src="js/color.js"></script>
+    <link rel="shortcut icon" type="image/png" href="media/logo.png"/>
     <title>OneStop - Youtube Channels</title>
 </head>
 
