--- a/instagram-accounts.html
+++ b/instagram-accounts.html
@@ -14,6 +14,7 @@
     <link href="css/style.css" rel="stylesheet">
     <link href="css/style-425.css" rel="stylesheet">
     <link href="css/instagram-accounts.css" rel="stylesheet">
+    <link rel="shortcut icon" type="image/png" href="media/logo.png"/>
     <link href="css/instagram-accounts-425.css" rel="stylesheet">
     <script src="js/instagram-accounts.js"></script>
     <title>OneStop - Instagram Accounts</title>
