--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
                 <i class="fab fa-github"></i>
             </a>
             
-            <a href='https://instagram.com/yashdidit'>
+            <a href='https://www.linkedin.com/in/yashkolambekar/'>
                 <i class="fab fa-linkedin"></i>
             </a>
             
