--- a/color.html
+++ b/color.html
@@ -64,8 +64,8 @@
         <div id='color-b-1' class='color-b'>
             <div>
                 rgb(<span id='breakrgb'><br></span>
-                    <input id='rrr' min="0" max='255' placeholder='RRR' value="0" oninput="bcolor1()" type='number'>,
-                <input id='ggg' min="0" max='255' placeholder='GGG' value="150" oninput="bcolor1()" type='number'>,
+                    <input id='rrr' min="0" max='255' placeholder='RRR' value="100" oninput="bcolor1()" type='number'>,
+                <input id='ggg' min="0" max='255' placeholder='GGG' value="0" oninput="bcolor1()" type='number'>,
                 <input id='bbb' placeholder='BBB' min="0" max='255' value="255" oninput="bcolor1()" type='number'>);
             </div>
         </div>
@@ -141,7 +141,7 @@
                 <i class="far fa-envelope"></i>
             </a>
 
-            <a href='https://instagram.com/yashdidit'>
+            <a href='https://www.linkedin.com/in/yashkolambekar/'>
                 <i class="fab fa-linkedin"></i>
             </a>
         </div>
