--- a/index.html
+++ b/index.html
@@ -26,15 +26,15 @@
             <div id="s1d1">
                 <p>OneStop is a one-stop solution to all your web development resources to kickstart your web development career and also to kickstart your every project 
                     <br/><br/>
-                    From boiler plates to resources to learn web development, this0 is a hub to get resources as for development.
+                    From boiler plates to resources to learn web development, this is a hub to get resources as for development.
                 </p>
                 <div id='s1d1d1'>
                     <button onclick="window.location.href='boilerplates.html'">BoilerPlates</button>
-                    <button onclick="window.location.href='snippets.html'">Snippets</button>
-                    <button onclick="window.location.href='color.html'">Colors</button>
+                    <button onclick="window.location.href='websites.html'">Websites</button>
                     <button onclick="window.location.href='instagram-accounts.html'">Instagram Accounts</button>
                     <button onclick="window.location.href='youtube-channels.html'">Youtube Channels</button>
-                    <button onclick="window.location.href='websites.html'">Websites</button>
+                    <button onclick="window.location.href='color.html'">Colors</button>
+                    <button onclick="window.location.href='snippets.html'">Snippets</button>
                 </div>
             </div>
             <div id="s1d2">
