--- a/youtube-channels.html
+++ b/youtube-channels.html
@@ -88,7 +88,7 @@
                 <i class="far fa-envelope"></i>
             </a>
 
-            <a href='https://instagram.com/yashdidit'>
+            <a href='https://www.linkedin.com/in/yashkolambekar/'>
                 <i class="fab fa-linkedin"></i>
             </a>
         </div>
