--- a/boilerplates.html
+++ b/boilerplates.html
@@ -243,7 +243,7 @@
                 <i class="far fa-envelope"></i>
             </a>
 
-            <a href='https://instagram.com/yashdidit'>
+            <a href='https://www.linkedin.com/in/yashkolambekar/'>
                 <i class="fab fa-linkedin"></i>
             </a>
         </div>
