--- a/snippets.html
+++ b/snippets.html
@@ -196,7 +196,7 @@ span {
                 <i class="far fa-envelope"></i>
             </a>
 
-            <a href='https://instagram.com/yashdidit'>
+            <a href='https://www.linkedin.com/in/yashkolambekar/'>
                 <i class="fab fa-linkedin"></i>
             </a>
         </div>
