--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@
     <link href='css/about-425.css' rel="stylesheet">
     <script src='js/snippets.js'></script>
     <link rel="shortcut icon" type="image/png" href="media/logo.png"/>
-    <title>OneStop - Snippets</title>
+    <title>OneStop - About</title>
 </head>
 
 <body>
